--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
 
 <p>There are a number of available options for the returned JSON and RSS data.  For example, you can change the number of returned tweets, switch user timelines, and retrieve tweets based upon a search query.  These are all documented as comments in the respective PHP files.</p>
 <p>If you prefer a cookbook style guide, head over to <a href="usage.html">the Usage Page</a> to see examples of Tweetledee in action.</p>
+<h2>
+<a name="go-to-support" class="anchor" href="#go-to-support"><span class="octicon octicon-link"></span></a>Get Help</h2>
+
+<p>Need help?  Here's <a href="support.html">the support page</a>.</p>
         </section>
 
         <aside id="sidebar">
