--- a/support.html
+++ b/support.html
@@ -28,11 +28,12 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+          <h2><a name="bug-reporting" class="anchor" href="#bug-reporting"><span class="octicon octicon-link"></span></a>Bugs</h2>
+          <p>Find a bug?  Please <a href="https://github.com/chrissimpkins/tweetledee/issues/new">post it as a new issue</a> on GitHub.  Thanks for taking the time to make Tweetledee better!</p>
           <h2>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support</h2>
+<a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
 
-<p>Having trouble with Tweetledee?  Feel free to drop me a line on Twitter <a href="http://twitter.com/0labs">@0labs</a> and I'd be happy to help you sort it out.</p>
-<p>Find a bug? <a href="https://github.com/chrissimpkins/tweetledee/issues/new">Please post it as a new issue on GitHub</a>.</p>
+<p>Having trouble?  Feel free to drop me a line on Twitter <a href="http://twitter.com/0labs">@0labs</a> and I'd be happy to help you sort it out.</p>
         </section>
 
         <aside id="sidebar">
