updated contact information

--- a/support.html
+++ b/support.html
@@ -33,7 +33,7 @@
           <h2>
 <a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
 
-<p>Having trouble?  Feel free to drop me a line on Twitter <a href="http://twitter.com/0labs">@0labs</a> and I'd be happy to help you sort it out.</p>
+<p>Having trouble?  Feel free to drop me a line on Twitter <a href="http://twitter.com/pixsied">@pixsied</a> and I'd be happy to help you sort it out.</p>
         </section>
 
         <aside id="sidebar">
