updated contact info

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             .tar.gz file
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a> @ <a href="http://twitter.com/0labs">Zero Labs</a>.</p>
+          <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a>.</p>
 
         </aside>
       </div>
