--- a/usage.html
+++ b/usage.html
@@ -30,7 +30,8 @@
         <section id="main-content">
           <h2>
 <a name="usage-guide-introduction" class="anchor" href="#usage-guide-introduction"><span class="octicon octicon-link"></span></a>Usage</h2>
-<p>In development.  Will be released this week.  Check back!</p>
+<p>The following examples demonstrate how to use Tweetledee on your web server.  If you are having problems with Tweetledee, you can find more information about how to get help and report bugs <a href="support.html">here</a>.</p>
+
         </section>
 
         <aside id="sidebar">
@@ -43,7 +44,7 @@
             .tar.gz file
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a> @ <a href="http://twitter.com/0labs">Zero Labs</a>.</p>
+          <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a>.</p>
 
         </aside>
       </div>
