updated usage notice

--- a/usage.html
+++ b/usage.html
@@ -31,6 +31,7 @@
           <h2>
 <a name="usage-guide-introduction" class="anchor" href="#usage-guide-introduction"><span class="octicon octicon-link"></span></a>Usage</h2>
 <p>The following examples demonstrate how to use Tweetledee on your web server.  If you are having problems with Tweetledee, you can find more information about how to get help and report bugs <a href="support.html">here</a>.</p>
+<p>Usage examples will be posted later today (6/24/2013)!</p>
 
         </section>
 
