--- a/usage.html
+++ b/usage.html
@@ -124,7 +124,7 @@
 <pre><code>
   http://[yourdomain]/tweetledee/searchrss.php?q=test&rt=recent&c=75
 </code></pre>
-
+<h2><a name="json-examples" class="anchor" href="#json-examples"><span class="octicon octicon-link"></span></a>JSON Types</h2>
 
         </section>
 
