--- a/usage.html
+++ b/usage.html
@@ -29,8 +29,8 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2><a name="usage-guide-introduction" class="anchor" href="#usage-guide-introduction"><span class="octicon octicon-link"></span></a>Usage</h2>
-<p>The following examples demonstrate how to use Tweetledee on your web server.  If you are having problems with Tweetledee, you can find more information about how to get help and report bugs <a href="support.html">here</a>.</p>
+          <h2><a name="usage-guide-introduction" class="anchor" href="#usage-guide-introduction"><span class="octicon octicon-link"></span></a>Tweetledee Usage</h2>
+<p>The following examples demonstrate how to use Tweetledee on your web server.  They assume that you uploaded the Tweetledee files as shown in <a href="index.html#three-minute-install">the install guide</a>. If you are having problems with Tweetledee, you can find more information about how to get help and report bugs <a href="support.html">here</a>.</p>
 <h2><a name="rss-feed-examples" class="anchor" href="#rss-feed-examples"><span class="octicon octicon-link"></span></a>RSS Feed Types</h2>
 <h3 class="blue"><i class="icon-check"></i> User Timeline RSS Feed <code>userrss.php</code></h3>
 <h5>Generic User Timeline URL</h5>
