--- a/usage.html
+++ b/usage.html
@@ -31,8 +31,21 @@
         <section id="main-content">
           <h2><a name="usage-guide-introduction" class="anchor" href="#usage-guide-introduction"><span class="octicon octicon-link"></span></a>Tweetledee Usage</h2>
 <p>The following examples demonstrate how to use Tweetledee on your web server.  They assume that you uploaded the Tweetledee files as shown in <a href="index.html#three-minute-install">the install guide</a>. If you are having problems with Tweetledee, you can find more information about how to get help and report bugs <a href="support.html">here</a>.</p>
+<h2><a name="usage-toc" class="anchor" href="#usage-toc"><span class="octicon octicon-link"></span></a>Contents</h2>
+<h3><i class="icon-list-ul"></i> JSON Types</h3>
+<ul>
+  <li>Home timeline JSON</li>
+  <li>Search result JSON</li>
+  <li>User timeline JSON</li>
+</ul>
+<h3><i class="icon-list-ul"></i> RSS Feed Types</h3>
+<ul>
+  <li>Home timeline RSS feed</li>
+  <li>Search result RSS feed</li>
+  <li>User timeline RSS feed</li>
+</ul>
 <h2><a name="rss-feed-examples" class="anchor" href="#rss-feed-examples"><span class="octicon octicon-link"></span></a>RSS Feed Types</h2>
-<h3 class="blue"><i class="icon-check"></i> User Timeline RSS Feed <code>userrss.php</code></h3>
+<h3 class="blue"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> User Timeline RSS Feed <code>userrss.php</code></h3>
 <h5>Generic User Timeline URL</h5>
 <pre><code>
   http://[yourdomain]/tweetledee/userrss.php
@@ -67,7 +80,7 @@
 </code></pre>
 
 
-<h3 class="blue"><i class="icon-check"></i> Home Timeline RSS Feed <code>homerss.php</code></h3>
+<h3 class="blue"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> Home Timeline RSS Feed <code>homerss.php</code></h3>
 <h5>Generic Home Timeline URL</h5>
 <pre><code>
   http://[yourdomain]/tweetledee/homerss.php
@@ -92,7 +105,7 @@
 </code></pre>
 
 
-<h3 class="blue"><i class="icon-check"></i> Tweet Search RSS Feed <code>searchrss.php</code></h3>
+<h3 class="blue"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> Tweet Search RSS Feed <code>searchrss.php</code></h3>
 <h5>Generic Tweet Search Feed URL</h5>
 <pre><code>
   http://[yourdomain]/tweetledee/searchrss.php?q=[search_term]
