--- a/support.html
+++ b/support.html
@@ -29,6 +29,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+          <h1>Tweetledee Help</h1>
           <h2><a name="bug-reporting" class="anchor" href="#bug-reporting"><span class="octicon octicon-link"></span></a>Bugs</h2>
           <p>Find a bug?  Please <a href="https://github.com/chrissimpkins/tweetledee/issues/new">post it as a new issue</a> on GitHub.  Thanks for taking the time to make Tweetledee better!</p>
           <h2>
