--- a/index.html
+++ b/index.html
@@ -95,14 +95,10 @@
 </ul>
 <p>That's it. You are done.  The example usage section will assume that you uploaded the files to your top level public facing web server directory so that the tweetledee directory appears like this:</p>
 <h5>Example Tweetledee URL path</h5>
-<pre><code>
-  http://[yourdomain]/tweetledee/[tweetledee_file]
-</code></pre>
+<pre><code>http://[yourdomain]/tweetledee/[tweetledee_file]</code></pre>
 <p>Try this as a quick test to confirm that it is working.  This will display your user timeline RSS feed:</p>
 <h5>Your New User Timeline Feed</h5>
-<pre><code>
-  http://[yourdomain]/tweetledee/userrss.php
-</code></pre>
+<pre><code>http://[yourdomain]/tweetledee/userrss.php</code></pre>
 <h2>
 <a name="file-types" class="anchor" href="#file-types"><span class="octicon octicon-link"></span></a>What Tweetledee Includes</h2>
 <h3>Home timeline JSON</h3>
