--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
@@ -49,7 +49,7 @@
 <h2>
 <a name="three-minute-install" class="anchor" href="#three-minute-install"><span class="octicon octicon-link"></span></a>The 3 Minute Install Guide</h2>
 
-<h3>Step 1 : Create a Twitter Application</h3>
+<h3><i class="icon-chevron-sign-right"></i> Step 1 : Create a Twitter Application</h3>
 <ul>
 <li><a href="https://dev.twitter.com/apps/new">Create a Twitter application on the Twitter Developers site</a></li>
 <li>For the application details:</li>
@@ -61,14 +61,14 @@
 <li>Click the 'Create Your Twitter Application' button</li>
 </ul>
 <p>Presto! You now have a Twitter application and access to the Twitter API.  This will provide you with the necessary tokens to access Twitter data with Tweetledee.</p>
-<h3>Step 2 : Download the Tweetledee files</h3>
+<h3><i class="icon-chevron-sign-right"></i> Step 2 : Download the Tweetledee files</h3>
 <ul>
     <li>Use one of the handy buttons on the right side of this page</li>
     <li>Decompress the files locally on your machine</li>
     <li>This should result in a directory called 'tweetledee-master' that contains the goods which lie within the 'tweetledee' directory</li>
     <li>The outer directory includes a FAQ, LICENSE, and README files.  They are worth a read, but they do not need to be included in the installation of Tweetledee on your server.</li>
 </ul>
-<h3>Step 3 : Obtain Your Twitter OAuth Settings</h3>
+<h3><i class="icon-chevron-sign-right"></i> Step 3 : Obtain Your Twitter OAuth Settings</h3>
 <ul>
   <li>Open your application settings page on the Twitter developers site</li>
   <li>Click the details tab for your application (if it is not selected)</li>
@@ -77,7 +77,7 @@
   <li>You are now viewing the four tokens that you need to access Twitter through Tweetledee</li>
   <li>You will enter these in Tweetledee in the next step</li>
 </ul>
-<h3>Step 4 : Enter your OAuth Settings in Tweetledee</h3>
+<h3><i class="icon-chevron-sign-right"></i> Step 4 : Enter your OAuth Settings in Tweetledee</h3>
 <ul>
   <li>Open the directory where you decompressed the Tweetledee files in Step 2 above</li>
   <li>Open the file located on this file path in any text editor : tweetledee > tldlib > keys > tweetledee_keys.php</li>
@@ -88,7 +88,7 @@
   <li>Confirm that you did not modify any other part of the settings file and that you maintained the single quotes around all of your tokens/keys</li>
   <li>Save the tweetledee_keys.php file</li>
 </ul>
-<h3>Step 5 : Upload the Tweetledee files to your Server</h3>
+<h3><i class="icon-chevron-sign-right"></i> Step 5 : Upload the Tweetledee files to your Server</h3>
 <ul>
   <li>Upload the tweetledee directory that you downloaded in Step 2 to your web server</li>
   <li>You do not need to upload the outer directory (probably called tweetledee-master) or the top level files in the outer directory (LICENSE, FAQ, etc) that you decompressed</li>
@@ -101,23 +101,23 @@
 <pre><code>http://[yourdomain]/tweetledee/userrss.php</code></pre>
 <h2>
 <a name="file-types" class="anchor" href="#file-types"><span class="octicon octicon-link"></span></a>What Tweetledee Includes</h2>
-<h3>Home timeline JSON</h3>
+<h3><i class="icon-th-large"></i> Home timeline JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/homejson.php</code></pre>
-<h3>Home timeline JSON (pretty printed)</h3>
+<h3><i class="icon-th-large"></i> Home timeline JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/homejson_pp.php</code></pre>
-<h3>Home timeline RSS feed</h3>
+<h3><i class="icon-th-large"></i> Home timeline RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/homerss.php</code></pre>
-<h3>Tweet search JSON</h3>
+<h3><i class="icon-th-large"></i> Tweet search JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchjson.php</code></pre>
-<h3>Tweet search JSON (pretty printed)</h3>
+<h3><i class="icon-th-large"></i> Tweet search JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchjson_pp.php</code></pre>
-<h3>Tweet search RSS feed</h3>
+<h3><i class="icon-th-large"></i> Tweet search RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchrss.php</code></pre>
-<h3>User timeline JSON</h3>
+<h3><i class="icon-th-large"></i> User timeline JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/userjson.php</code></pre>
-<h3>User timeline JSON (pretty printed)</h3>
+<h3><i class="icon-th-large"></i> User timeline JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/userjson_pp.php</code></pre>
-<h3>User timeline RSS feed</h3>
+<h3><i class="icon-th-large"></i> User timeline RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/userrss.php</code></pre>
 
 <h2>
