--- a/usage.html
+++ b/usage.html
@@ -32,13 +32,13 @@
           <h1><a name="usage-guide-introduction" class="anchor" href="#usage-guide-introduction"><span class="octicon octicon-link"></span></a>Tweetledee Usage</h1>
 <p>The following examples demonstrate how to use Tweetledee on your web server.  They assume that you uploaded the Tweetledee files as shown in <a href="index.html#three-minute-install">the install guide</a>. If you are having problems with Tweetledee, you can find more information about how to get help and report bugs <a href="support.html">here</a>.</p>
 <h2><a name="usage-toc" class="anchor" href="#usage-toc"><span class="octicon octicon-link"></span></a>Contents</h2>
-<h3><i class="icon-list-ul"></i> JSON Types</h3>
+<h3><span style="color:green !important"><i class="icon-file-text"></i></span> JSON Types</h3>
 <ul>
   <li>Home timeline JSON</li>
   <li>Search result JSON</li>
   <li>User timeline JSON</li>
 </ul>
-<h3><i class="icon-list-ul"></i> RSS Feed Types</h3>
+<h3><span style="color:orange !important"><i class="icon-rss-sign"></i></span> RSS Feed Types</h3>
 <ul>
   <li>Home timeline RSS feed</li>
   <li>Search result RSS feed</li>
