--- a/usage.html
+++ b/usage.html
@@ -34,18 +34,118 @@
 <h2><a name="usage-toc" class="anchor" href="#usage-toc"><span class="octicon octicon-link"></span></a>Contents</h2>
 <h3><span style="color:green !important"><i class="icon-file-text"></i></span> JSON Types</h3>
 <ul>
-  <li>Home timeline JSON</li>
-  <li>Search result JSON</li>
-  <li>User timeline JSON</li>
+  <li><a href="#home_json">Home timeline JSON</a></li>
+  <li><a href="#search_json">Tweet search JSON</a></li>
+  <li><a href="#user_json">User timeline JSON</a></li>
 </ul>
 <h3><span style="color:orange !important"><i class="icon-rss-sign"></i></span> RSS Feed Types</h3>
 <ul>
-  <li>Home timeline RSS feed</li>
-  <li>Search result RSS feed</li>
-  <li>User timeline RSS feed</li>
+  <li><a href="#home_rss">Home timeline RSS feed</a></li>
+  <li><a href="#search_rss">Tweet search RSS feed</a></li>
+  <li><a href="#user_rss">User timeline RSS feed</a></li>
 </ul>
+<h2><a name="json-examples" class="anchor" href="#json-examples"><span class="octicon octicon-link"></span></a>JSON Types</h2>
+<p>[ <i class="icon-info"></i> ]  Note that pretty printed JSON is obtained by adding the <code>_pp</code> suffix to the file name (e.g. userjson.php >> userjson_pp.php).  Pretty printed JSON requires PHP v5.4 and above.  Standard JSON results require PHP v5.1.2 and above.</p>
+
+<h3 class="blue" id="home_json"><span style="color:green !important"><i class="icon-file-text"></i></span> Home Timeline JSON <code>homejson.php</code> + <code>homejson_pp.php</code></h3>
+<h5>Generic Home Timeline JSON</h5>
+<pre><code>http://[yourdomain]/tweetledee/homejson.php</code></pre>
+<h5>Optional URL Parameters</h5>
+<table>
+<tr><th>Parameter</th><th>Description</th><th>Default</th><th>Values</th></tr>
+ <tr><td>c</td><td>Tweet count</td><td>25</td><td>1 - 200</td></tr>
+ <tr><td>xrp</td><td>Exclude replies</td><td>0 (=false)</td><td>1 (=true)</td></tr>
+</table>
+<h5>Home Timeline with 100 Tweets</h5>
+<pre><code>http://[yourdomain]/tweetledee/homejson.php?c=100</code></pre>
+<h5>Home Timeline, Exclude Replies</h5>
+<pre><code>http://[yourdomain]/tweetledee/homejson.php?xrp=1</code></pre>
+<h5>All Options</h5>
+<pre><code>http://[yourdomain]/tweetledee/homejson.php?c=100&xrp=1</code></pre>
+
+<h3 class="blue" id="search_json"><span style="color:green !important"><i class="icon-file-text"></i></span> Tweet Search JSON <code>searchjson.php</code> + <code>searchjson_pp.php</code></h3>
+<h5>Generic Tweet Search JSON</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchjson.php?q=[search_term]</code></pre>
+<h5>Optional URL Parameters</h5>
+<table>
+<tr><th>Parameter</th><th>Description</th><th>Default</th><th>Values</th></tr>
+ <tr><td>c</td><td>Tweet count</td><td>25</td><td>1 - 200</td></tr>
+ <tr><td>rt</td><td>Result type</td><td>mixed</td><td>popular | recent</td></tr>
+ <tr><td>q</td><td>Search query</td><td>(required)</td><td>any search term</td></tr>
+</table>
+<h5>Search for "test"</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchjson.php?q=test</code></pre>
+<h5>Search for "test", Return 200 Results</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchjson.php?q=test&c=200</code></pre>
+<h5>Search for "test", Realtime Tweet Search (i.e. recent)</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchjson.php?q=test&rt=recent</code></pre>
+<h5>Search for "test", Popular Tweet Search (i.e. popular)</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchjson.php?q=test&rt=popular</code></pre>
+<h5>All Options</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchjson.php?q=test&rt=recent&c=75</code></pre>
+
+<h3 class="blue" id="user_json"><span style="color:green !important"><i class="icon-file-text"></i></span> User Timeline JSON <code>userjson.php</code> + <code>userjson_pp.php</code></h3>
+<h5>Generic User Timeline JSON</h5>
+<pre><code>http://[yourdomain]/tweetledee/userjson.php</code></pre>
+<table>
+<tr><th>Parameter</th><th>Description</th><th>Default</th><th>Values</th></tr>
+ <tr><td>c</td><td>Tweet count</td><td>25</td><td>1 - 200</td></tr>
+ <tr><td>user</td><td>Twitter user</td><td>you</td><td>any username</td></tr>
+ <tr><td>xrp</td><td>Exclude replies</td><td>0 (=false)</td><td>1 (=true)</td></tr>
+ <tr><td>xrt</td><td>Exclude retweets</td><td>0 (=false)</td><td>1 (=true)</td></tr>
+</table>
+<h5>User Timeline with 100 Tweets</h5>
+<pre><code>http://[yourdomain]/tweetledee/userjson.php?c=100</code></pre>
+<h5>User Timeline of a Different User (@pixsied)</h5>
+<pre><code>http://[yourdomain]/tweetledee/userjson.php?user=pixsied</code></pre>
+<h5>User Timeline, Excluding All Replies</h5>
+<pre><code>http://[yourdomain]/tweetledee/userjson.php?xrp=1</code></pre>
+<h5>User Timeline, Excluding All Retweets</h5>
+<pre><code>http://[yourdomain]/tweetledee/userjson.php?xrt=1</code></pre>
+<h5>All Options</h5>
+<pre><code>http://[yourdomain]/tweetledee/userjson.php?c=100&user=pixsied&xrp=1&xrt=1</code></pre>
+
 <h2><a name="rss-feed-examples" class="anchor" href="#rss-feed-examples"><span class="octicon octicon-link"></span></a>RSS Feed Types</h2>
-<h3 class="blue"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> User Timeline RSS Feed <code>userrss.php</code></h3>
+
+<h3 class="blue" id="home_rss"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> Home Timeline RSS Feed <code>homerss.php</code></h3>
+<h5>Generic Home Timeline URL</h5>
+<pre><code>http://[yourdomain]/tweetledee/homerss.php</code></pre>
+<h5>Optional URL Parameters</h5>
+<table>
+<tr><th>Parameter</th><th>Description</th><th>Default</th><th>Values</th></tr>
+ <tr><td>c</td><td>Tweet count</td><td>25</td><td>1 - 200</td></tr>
+ <tr><td>xrp</td><td>Exclude replies</td><td>0 (=false)</td><td>1 (=true)</td></tr>
+</table>
+<h5>Home Timeline with 100 Tweets</h5>
+<pre><code>http://[yourdomain]/tweetledee/homerss.php?c=100</code></pre>
+<h5>Home Timeline, Exclude Replies</h5>
+<pre><code>http://[yourdomain]/tweetledee/homerss.php?xrp=1</code></pre>
+<h5>All Options</h5>
+<pre><code>http://[yourdomain]/tweetledee/homerss.php?c=100&xrp=1</code></pre>
+
+
+<h3 class="blue" id="search_rss"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> Tweet Search RSS Feed <code>searchrss.php</code></h3>
+<h5>Generic Tweet Search Feed URL</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=[search_term]</code></pre>
+<h5>Optional URL Parameters</h5>
+<table>
+<tr><th>Parameter</th><th>Description</th><th>Default</th><th>Values</th></tr>
+ <tr><td>c</td><td>Tweet count</td><td>25</td><td>1 - 200</td></tr>
+ <tr><td>rt</td><td>Result type</td><td>mixed</td><td>popular | recent</td></tr>
+ <tr><td>q</td><td>Search query</td><td>(required)</td><td>any search term</td></tr>
+</table>
+<h5>Search for "test"</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test</code></pre>
+<h5>Search for "test", Return 200 Results</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test&c=200</code></pre>
+<h5>Search for "test", Realtime Tweet Search (i.e. recent)</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test&rt=recent</code></pre>
+<h5>Search for "test", Popular Tweet Search (i.e. popular)</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test&rt=popular</code></pre>
+<h5>All Options</h5>
+<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test&rt=recent&c=75</code></pre>
+
+<h3 class="blue" id="user_rss"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> User Timeline RSS Feed <code>userrss.php</code></h3>
 <h5>Generic User Timeline URL</h5>
 <pre><code>http://[yourdomain]/tweetledee/userrss.php</code></pre>
 <h5>Optional URL Parameters</h5>
@@ -66,46 +166,6 @@
 <pre><code>http://[yourdomain]/tweetledee/userrss.php?xrt=1</code></pre>
 <h5>All Options</h5>
 <pre><code>http://[yourdomain]/tweetledee/userrss.php?c=100&user=pixsied&xrp=1&xrt=1</code></pre>
-
-
-<h3 class="blue"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> Home Timeline RSS Feed <code>homerss.php</code></h3>
-<h5>Generic Home Timeline URL</h5>
-<pre><code>http://[yourdomain]/tweetledee/homerss.php</code></pre>
-<h5>Optional URL Parameters</h5>
-<table>
-<tr><th>Parameter</th><th>Description</th><th>Default</th><th>Values</th></tr>
- <tr><td>c</td><td>Tweet count</td><td>25</td><td>1 - 200</td></tr>
- <tr><td>xrp</td><td>Exclude replies</td><td>0 (=false)</td><td>1 (=true)</td></tr>
-</table>
-<h5>Home Timeline with 100 Tweets</h5>
-<pre><code>http://[yourdomain]/tweetledee/homerss.php?c=100</code></pre>
-<h5>Home Timeline, Exclude Replies</h5>
-<pre><code>http://[yourdomain]/tweetledee/homerss.php?xrp=1</code></pre>
-<h5>All Options</h5>
-<pre><code>http://[yourdomain]/tweetledee/homerss.php?c=100&xrp=1</code></pre>
-
-
-<h3 class="blue"><span style="color:orange !important"><i class="icon-rss-sign"></i></span> Tweet Search RSS Feed <code>searchrss.php</code></h3>
-<h5>Generic Tweet Search Feed URL</h5>
-<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=[search_term]</code></pre>
-<h5>Optional URL Parameters</h5>
-<table>
-<tr><th>Parameter</th><th>Description</th><th>Default</th><th>Values</th></tr>
- <tr><td>c</td><td>Tweet count</td><td>25</td><td>1 - 200</td></tr>
- <tr><td>rt</td><td>Result type</td><td>mixed</td><td>popular | recent</td></tr>
- <tr><td>q</td><td>Search query</td><td>(required)</td><td>any search term</td></tr>
-</table>
-<h5>Search for "test"</h5>
-<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test</code></pre>
-<h5>Search for "test", Return 200 Results</h5>
-<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test&c=200</code></pre>
-<h5>Search for "test", Realtime Tweet Search (i.e. recent)</h5>
-<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test&rt=recent</code></pre>
-<h5>Search for "test", Popular Tweet Search (i.e. popular)</h5>
-<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test&rt=popular</code></pre>
-<h5>All Options</h5>
-<pre><code>http://[yourdomain]/tweetledee/searchrss.php?q=test&rt=recent&c=75</code></pre>
-<h2><a name="json-examples" class="anchor" href="#json-examples"><span class="octicon octicon-link"></span></a>JSON Types</h2>
 
         </section>
 
