--- a/support.html
+++ b/support.html
@@ -31,7 +31,7 @@
         <section id="main-content">
           <h1>Tweetledee Help</h1>
           <h2><a name="bug-reporting" class="anchor" href="#bug-reporting"><span class="octicon octicon-link"></span></a>Bugs</h2>
-          <p>Find a bug?  Please <a href="https://github.com/chrissimpkins/tweetledee/issues/new">post it as a new issue</a> on GitHub.  Thanks for taking the time to make Tweetledee better!</p>
+          <p>Find a bug?  Please <a href="https://github.com/chrissimpkins/tweetledee/issues/new">post it as a new issue</a> on GitHub.  Thanks for taking the time to report it.</p>
           <h2>
 <a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
 
