--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <h2>
 <a name="go-to-usage" class="anchor" href="#go-to-usage"><span class="octicon octicon-link"></span></a>Usage</h2>
 
-<p>There are a number of available options for the returned JSON and RSS data.  For example, you can change the number of returned tweets, switch user timelines, and retrieve tweets based upon a search query.  These are all documented as comments in the respective PHP files.</p>
+<p>There are a number of available options for the returned JSON and RSS data.  For example, you can change the number of returned tweets, switch user timelines, exclude retweets & replies, and retrieve tweets based upon a search query.  These are all documented as comments in the respective PHP files.</p>
 <p>For more detailed treatment of usage, head over to <a href="usage.html">this page</a> to see examples of Tweetledee in action.</p>
 <h2>
 <a name="go-to-support" class="anchor" href="#go-to-support"><span class="octicon octicon-link"></span></a>Get Help</h2>
