--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
 <pre><code>http://[yourdomain]/tweetledee/userrss.php</code></pre>
 <h2>
 <a name="file-types" class="anchor" href="#file-types"><span class="octicon octicon-link"></span></a>What Tweetledee Includes</h2>
-<h3><i class="icon-th-large"></i> Home timeline JSON</h3>
+<h3><i class="icon-certificate"></i> Home timeline JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/homejson.php</code></pre>
-<h3><i class="icon-th-large"></i> Home timeline JSON (pretty printed)</h3>
+<h3><i class="icon-certificate"></i> Home timeline JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/homejson_pp.php</code></pre>
-<h3><i class="icon-th-large"></i> Home timeline RSS feed</h3>
+<h3><i class="icon-certificate"></i> Home timeline RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/homerss.php</code></pre>
-<h3><i class="icon-th-large"></i> Tweet search JSON</h3>
+<h3><i class="icon-certificate"></i> Tweet search JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchjson.php</code></pre>
-<h3><i class="icon-th-large"></i> Tweet search JSON (pretty printed)</h3>
+<h3><i class="icon-certificate"></i> Tweet search JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchjson_pp.php</code></pre>
-<h3><i class="icon-th-large"></i> Tweet search RSS feed</h3>
+<h3><i class="icon-certificate"></i> Tweet search RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchrss.php</code></pre>
-<h3><i class="icon-th-large"></i> User timeline JSON</h3>
+<h3><i class="icon-certificate"></i> User timeline JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/userjson.php</code></pre>
-<h3><i class="icon-th-large"></i> User timeline JSON (pretty printed)</h3>
+<h3><i class="icon-certificate"></i> User timeline JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/userjson_pp.php</code></pre>
-<h3><i class="icon-th-large"></i> User timeline RSS feed</h3>
+<h3><i class="icon-certificate"></i> User timeline RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/userrss.php</code></pre>
 
 <h2>
