--- a/support.html
+++ b/support.html
@@ -57,6 +57,14 @@
             <small>Download</small>
             .tar.gz file
           </a>
+          <a href="index.html" class="tld-btn">
+            <small>Return</small>
+            Home
+          </a>
+          <a href="usage.html" class="tld-btn">
+            <small>Learn More</small>
+            Usage
+          </a>
 
           <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a>.</p>
 
