--- a/usage.html
+++ b/usage.html
@@ -188,6 +188,14 @@
             <small>Download</small>
             .tar.gz file
           </a>
+          <a href="index.html" class="tld-btn">
+            <small>Return</small>
+            Home
+          </a>
+          <a href="support.html" class="tld-btn">
+            <small>Get Help</small>
+            Support
+          </a>
 
           <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a>.</p>
 
