--- a/support.html
+++ b/support.html
@@ -51,7 +51,7 @@
           <h4>How do I get my Twitter OAuth tokens/keys?</h4>
           <p>You need to make a Twitter application</p>
           <h4>I don't make applications. Does that mean that I can't use Tweetledee?</h4>
-          <p>Tweetledee acts as your application and allows you to access Twitter data through the Twitter API.  You can designate the domain where you use Tweetledee as the application URL.</p>
+          <p>Tweetledee acts as your application and allows you to access Twitter data through the Twitter API.  You can designate the domain where you install and use Tweetledee as the application URL.</p>
           <h4>How do I make a Twitter application?</h4>
           <p>Please see the detailed guide on the <a href="index.html">home page of this documentation site</a></p>
           <h4>What is the URL for the new application page on the Twitter developers site?</h4>
