--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
     <meta name="google-site-verification" content="7XYepMSTUejZjRrgHrRzGSlKmIenbVQFR-aAxPyeqyc" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
